syntax = "proto3";
package OmniFlix.onft.v1beta1;

import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "OmniFlix/onft/v1beta1/params.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "OmniFlix/onft/v1beta1/onft.proto";

option go_package = "github.com/OmniFlix/omniflixhub/v5/x/onft/types";
option (gogoproto.goproto_getters_all) = false;

service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc CreateDenom(MsgCreateDenom) returns (MsgCreateDenomResponse);

  rpc UpdateDenom(MsgUpdateDenom) returns (MsgUpdateDenomResponse);

  rpc TransferDenom(MsgTransferDenom) returns (MsgTransferDenomResponse);

  rpc PurgeDenom(MsgPurgeDenom) returns (MsgPurgeDenomResponse);

  rpc MintONFT(MsgMintONFT) returns (MsgMintONFTResponse);

  rpc TransferONFT(MsgTransferONFT) returns (MsgTransferONFTResponse);

  rpc BurnONFT(MsgBurnONFT) returns (MsgBurnONFTResponse);

  // UpdateParams defines a governance operation for updating the onft module
  // parameters. The authority is hard-coded to the onft module account.
  //
  // Since: cosmos-sdk 0.47
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

message MsgCreateDenom {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name)           = "OmniFlix/onft/MsgCreateDenom";
  option (gogoproto.equal)      = false;

  string id = 1;
  string symbol = 2;
  string name = 3;
  string description = 4;
  string preview_uri = 5 [
    (gogoproto.moretags) = "yaml:\"preview_uri\"",
    (gogoproto.customname) = "PreviewURI"
  ];
  string schema = 6;
  string sender = 7;
  cosmos.base.v1beta1.Coin creation_fee = 8 [
    (gogoproto.moretags) = "yaml:\"creation_fee\"",
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  string uri = 9;
  string uri_hash = 10;
  string data = 11;
  repeated WeightedAddress royalty_receivers = 12 [
    (gogoproto.moretags) = "yaml:\"royalty_receivers\""
  ];
}

message MsgCreateDenomResponse {}

message MsgUpdateDenom {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name)           = "OmniFlix/onft/MsgUpdateDenom";
  option (gogoproto.equal)      = false;

  string id = 1;
  string name = 2;
  string description = 3;
  string preview_uri = 4 [
    (gogoproto.moretags) = "yaml:\"preview_uri\"",
    (gogoproto.customname) = "PreviewURI"
  ];
  string sender = 5;
  repeated WeightedAddress royalty_receivers = 6 [
    (gogoproto.moretags) = "yaml:\"royalty_receivers\""
  ];
}

message MsgUpdateDenomResponse {}

message MsgPurgeDenom {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name)           = "OmniFlix/onft/MsgPurgeDenom";
  option (gogoproto.equal)      = false;

  string id = 1;
  string sender = 2;
}

message MsgPurgeDenomResponse {}

message MsgTransferDenom {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name)           = "OmniFlix/onft/MsgTransferDenom";
  option (gogoproto.equal)      = false;

  string id = 1;
  string sender = 2;
  string recipient = 3;
}

message MsgTransferDenomResponse {}

message MsgMintONFT {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name)           = "OmniFlix/onft/MsgMintONFT";
  option (gogoproto.equal)      = false;

  string   id = 1;
  string   denom_id = 2 [(gogoproto.moretags) = "yaml:\"denom_id\""];
  Metadata metadata = 3 [(gogoproto.nullable) = false];
  string   data = 4;
  bool     transferable = 5;
  bool     extensible = 6;
  bool     nsfw = 7;
  string   royalty_share = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"royalty_share\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"
  ];
  string   sender = 9;
  string   recipient = 10;
}

message MsgMintONFTResponse {}

message MsgTransferONFT {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name)           = "OmniFlix/onft/MsgTransferONFT";
  option (gogoproto.equal)      = false;

  string id = 1;
  string denom_id = 2 [(gogoproto.moretags) = "yaml:\"denom_id\""];
  string sender = 3;
  string recipient = 4;
}

message MsgTransferONFTResponse {}

message MsgBurnONFT {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name)           = "OmniFlix/onft/MsgBurnONFT";
  option (gogoproto.equal)      = false;

  string id = 1;
  string denom_id = 2 [(gogoproto.moretags) = "yaml:\"denom_id\""];
  string sender = 3;
}

message MsgBurnONFTResponse {}

// MsgUpdateParams is the Msg/UpdateParams request type.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address of the governance account.
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the onft module parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParamsResponse {}